@@ -119,6 +119,8 @@ class Collector(object):
             # trace function.
             self._trace_class = CTracer or PyTracer
 
+        self.supports_plugins = self._trace_class is CTracer
+
     def __repr__(self):
         return "<Collector at 0x%x>" % id(self)
 
