@@ -249,7 +249,7 @@ class TempDirMixin(SysPathAwareMixin, ModuleAwareMixin, TestCase):
     def report_on_class_behavior(cls):
         """Called at process exit to report on class behavior."""
         for test_class, behavior in cls.class_behaviors.items():
-            if behavior.tests == behavior.skipped:
+            if behavior.tests <= behavior.skipped:
                 bad = ""
             elif behavior.temp_dir and behavior.tests_making_files == 0:
                 bad = "Inefficient"
